Major reorganization of JLODA library